# deepparse

./: .buildinfo  .coveragerc  .env_example  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  api.html  app_requirements.txt  bpemb.version  cli.html  codecov_push.sh  comparer.html  dataset_container.html  docker-compose.yml  evaluate_model.py  extra_requirements.txt  fasttext.version  fine_tuning_po_boxes_script.py  fine_tuning_script.py  genindex.html  index.html  main.py  major_release_todo.md  nginx.conf  nginx.conf.template  objects.inv  parser.html  pre_processor.html  pypi_deploy.sh  pyproject.toml  pytest.ini  release_info.md  (+11 more)
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.release/: bpemb.version  bpemb_attention.version  fasttext.version  fasttext_attention.version  model_version_release.md
_modules/: index.html
_sources/: api.rst.txt  cli.rst.txt  dataset_container.rst.txt  index.rst.txt  parser.rst.txt
_static/: documentation_options.js
conf/: config.yaml
data_handling/: DataLoadersGenerator.py  ToTensor.py  ToTensorOuputReuse.py  ToTensorTeacerForcing.py
deepParse/: __init__.py  fasttest_tools.py  main.py  tools.py  torch_tuple.py
deepparse/: __init__.py  bpemb_url_bug_fix.py  download.py  download_tools.py  fasttext_tools.py  tools.py  validations.py  weight_init.py  weights_init.py  weights_tools.py
docs/: .gitignore  Makefile  requirements.txt
examples/: fine_tuning.html  (+24 more)
(+421 files in other folders)
