[tool.black]
target-version = ['py38', 'py39', 'py310', 'py311']

line-length = 120
skip-string-normalization = true
required-version = "23.9.1"
extend-exclude = "/(slides)/"

[tool.pylint.ini_options]
DJANGO_SETTINGS_MODULE = "settings"

[build-system]
requires = ["setuptools", "wheel", "pybind11"]