[metadata]
description-file = README.md

[options.entry_points]
console_scripts =
    parse = deepparse.cli.parse:main
    retrain = deepparse.cli.retrain:main
    test = deepparse.cli.test:main
    download_model = deepparse.cli.download_model:main
    download_models = deepparse.cli.download_models:main